Completato SBML2TNET SCPN

--- a/pangeatranslator.properties
+++ b/pangeatranslator.properties
@@ -1,1 +1,2 @@
-jdk.home.1.6=C\:/Program Files/Java/jdk1.6.0_10
+jdk.home.1.6=C\:/Program Files/Sun/SDK/jdk
+libraries.path=D\:/Projects/Java/librerie
