--- a/trunk/types/types.properties
+++ b/trunk/types/types.properties
@@ -1,2 +1,3 @@
-jdk.home.1.6=C\:/Program Files/Java/jdk1.6.0_10
-jibx.basedir=C\:/Users/Francesco De Nes/Progetti/Java/librerie/jibx
+jdk.home.1.6=C\:/Program Files/Sun/SDK/jdk
+jibx.basedir=D\:/Projects/Java/librerie/jibx
+jibx.schemalocation=xxx
